--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.slick-prev {
+    left: 3% !important;
+    z-index: 1;
+}
+
+.slick-next{
+    right: 3% !important;
+    z-index: 1;
+}
